ajouté les elements de main HTML

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         </section>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <h2>Welcome to our Flag Master</h2>
+      <h2>Are you a Flag pro?</h2>
+      <button>Get started</button>
+    </main>
     <footer></footer>
   </body>
 </html>
