added footer elements

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <h2>Are you a Flag pro?</h2>
       <button>Get started</button>
     </main>
-    <footer></footer>
+    <footer>
+      <progress value="50" max="100"></progress>
+    </footer>
   </body>
 </html>
