added rest elements

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     </main>
     <footer>
       <progress value="50" max="100"></progress>
+      <img src="/images/ampoule.png" alt="hint" />
+      <button>I give up!</button>
     </footer>
   </body>
 </html>
