create table.css and edited HTML

--- a/index.html
+++ b/index.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="mobile.css" />
-    <link
-      rel="stylesheet"
-      href="tablet.css"
-      media="(min-width: 768px) and (max-width: 1024px)"
-    />
+    <link rel="stylesheet" href="tablet.css" media="(min-width: 768px)" />
     <link rel="stylesheet" href="desktop.css" media="(min-width: 1024px)" />
-
-    <link rel="stylesheet" href="desktop.css" />
-    <title>Flag Master</title>
   </head>
   <body>
     <header>
@@ -26,8 +19,8 @@
     <main>
       <section class="question">
         <div id="welcome_text">
-          <h2>Welcome to our Flag Master</h2>
-          <h2>Are you a Flag pro?</h2>
+          <h2 class="h2top">Welcome to our Flag Master</h2>
+          <h2 class="h2bot">Are you a Flag pro?</h2>
         </div>
         <button id="start-button">Get started</button>
       </section>
