image avatar modifié + html&JS linké + petites modifs sur HTML + première page de JS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="tablet.css"
       media="(min-width: 768px) and (max-width: 1024px)"
     />
-    <link rel="stylesheet" href="desktop.css" media="(min-width: 1024px)" />
+    <link rel="stylesheet" href="tablet.css" media="(min-width: 1024px)" />
 
     <link rel="stylesheet" href="desktop.css" />
     <title>Flag Master</title>
@@ -24,7 +24,7 @@
       </nav>
     </header>
     <main>
-      <section class="question">
+      <section class="carte">
         <div id="welcome_text">
           <h2>Welcome to our Flag Master</h2>
           <h2>Are you a Flag pro?</h2>
@@ -47,5 +47,6 @@
         </div>
       </section>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
