--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </nav>
     </header>
     <main>
-      <section class="question">
+      <section class="carte">
         <div id="welcome_text">
           <h2 class="h2top">Welcome to our Flag Master</h2>
           <h2 class="h2bot">Are you a Flag pro?</h2>
@@ -40,5 +40,6 @@
         </div>
       </section>
     </footer>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
