modification de index.html et scrip.js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <nav>
-        <section class="logo-titre">z
+        <section class="logo-titre">
           <img src="/images/logoWorld.png" alt="logoFlagMaster" />
           <h1>Flag Master</h1>
         </section>
