added carte de score et button restart + fonction de give up button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="/images/ampoule.png" alt="hint" />
           </div>
           <div>
-            <button>I give up!</button>
+            <button id="giveup-button">I give up!</button>
           </div>
         </div>
       </section>
